--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Azia",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Inyiama Kossy",
+  "homepage": "http://github.com/kossy18",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -24,9 +24,9 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
-    "firebase": "^4.8.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "firebase": "4.8.0",
     "pretty-date": "^0.2.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
@@ -36,5 +36,5 @@
     "@ionic/app-scripts": "3.1.6",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "A simple journal to pen down thoughts"
 }
